--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "grunt-bower": "*",
         "grunt-mkdir": "*",
         "grunt-contrib-copy": "*",
+        "grunt-chmod": "*",
 
         "grunt-auto-install": "/home/neumann/Work/grunt-auto-install"
     }
