Remove w2ui CSS files out of the sources thus making sure that no external code is released in Binder Explorer.

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "w2ui": "1.4.2",
+    "w2ui": "git@github.com:fdgonthier/w2ui-dist.git#master",
     "jquery": "2.1.1",
     "backbone": "1.1.2",
     "underscore": "1.7.0",
