Change bower.json license.

--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "moduleType": [
     "amd"
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": true,
   "ignore": [
     "**/.*",
