Hack the Gruntfile to handle downloading binary node.js modules from GitHub as well as the Node.js binary.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "license": "Apache-2.0",
-    "scripts": {
-        "start": "node-android app.js"
-    },
     "author": {
         "name": "François-Denis Gonthier",
         "email": "francois-denis.gonthier@opersys.com"
+    },
+    "prebuilts": {
+        "modules": {
+            "ia32": [ "https://github.com/opersys/jsbinder/releases/download/0.1.0/jsbinder-0.1.0_ia32.tar.gz" ],
+            "arm": [ "https://github.com/opersys/jsbinder/releases/download/0.1.0/jsbinder-0.1.0_arm.tar.gz" ]
+        },
+        "misc": {
+            "ia32": [ "https://github.com/opersys/node/releases/download/v0.10.33/node_ia32.tar.gz" ],
+            "arm": [ "https://github.com/opersys/node/releases/download/v0.10.33/node_arm.tar.gz" ]
+        }
     },
     "dependencies": {
         "express": "*",
@@ -18,7 +25,6 @@
         "queue": "*",
         "underscore": "*",
         "pslook": "*",
-        "jslibbinder": "/home/neumann/Work/JSlibBinder",
         "guid": "*",
         "lstream": "*"
     },
@@ -32,6 +38,7 @@
         "grunt-chmod": "*",
         "grunt-auto-install": "*",
         "grunt-contrib-compress": "*",
-        "grunt-exec": "*"
+        "grunt-exec": "*",
+        "download": "4.1.2"
     }
 }
