--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         }
     },
     "dependencies": {
+        "js-cache": "1.0.2",
         "express": "*",
         "express-busboy": "*",
         "serve-static": "*",
