--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "js-cache": "1.0.2",
+        "async": "1.0.0",
         "express": "*",
         "express-busboy": "*",
         "serve-static": "*",
@@ -31,6 +32,7 @@
     },
     "devDependencies": {
         "grunt": "~0.4.2",
+        "async": "1.0.0",
         "grunt-bower-requirejs": "*",
         "grunt-bower-concat": "*",
         "grunt-bower": "*",
