--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "underscore": "*",
         "pslook": "*",
         "guid": "*",
-        "lstream": "*"
+        "lstream": "*",
+        "socket.io": "1.3.5",
+        "debug": "2.2.0"
     },
     "devDependencies": {
         "grunt": "~0.4.2",
