--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,9 @@
     "queueManager": "*",
     "nprogress": "0.1.6",
     "d3": "3.5.2",
-    "requirejs-bower": "2.1.16"
+    "requirejs-bower": "2.1.16",
+    "handlebars": "3.0.3",
+    "highlightjs": "8.7.0"
   },
   "resolutions": {
     "d3": "3.5.2"
