--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "prebuilts": {
     "modules": {
       "ia32": [
-        "https://github.com/opersys/jsbinder/releases/download/0.2.0/jsbinder-0.2.0_ia32.tar.gz"
+        "https://github.com/opersys/jsbinder/releases/download/0.3.0/jsbinder-0.3.0_ia32.tar.gz",
+        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_ia32.tar.gz"
       ],
       "arm": [
-        "https://github.com/opersys/jsbinder/releases/download/0.2.0/jsbinder-0.2.0_arm.tar.gz"
+        "https://github.com/opersys/jsbinder/releases/download/0.3.0/jsbinder-0.3.0_arm.tar.gz",
+        "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_arm.tar.gz"
       ]
     },
     "misc": {
@@ -31,7 +33,6 @@
     "express": "*",
     "express-busboy": "*",
     "guid": "*",
-    "jison": "^0.4.15",
     "js-cache": "1.0.2",
     "lstream": "*",
     "morgan": "*",
@@ -40,7 +41,8 @@
     "serve-static": "*",
     "socket.io": "1.3.5",
     "underscore": "*",
-    "linebyline": "0.0.9"
+    "linebyline": "0.0.9",
+    "yargs": "3.9.1"
   },
   "devDependencies": {
     "async": "1.0.0",
