--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "prebuilts": {
     "modules": {
       "ia32": [
-        "https://github.com/opersys/jsbinder/releases/download/0.3.0/jsbinder-0.3.0_ia32.tar.gz",
+        "https://github.com/opersys/jsbinder/releases/download/0.3.1/jsbinder-0.3.1_ia32.tar.gz",
         "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_ia32.tar.gz"
       ],
       "arm": [
-        "https://github.com/opersys/jsbinder/releases/download/0.3.0/jsbinder-0.3.0_arm.tar.gz",
+        "https://github.com/opersys/jsbinder/releases/download/0.3.1/jsbinder-0.3.1_arm.tar.gz",
         "https://github.com/fdgonthier/node-abstractsocket/releases/download/v1.1.0/abstract-socket-1.1.0_arm.tar.gz"
       ]
     },
@@ -50,6 +50,7 @@
     "download": "4.1.2",
     "grunt": "~0.4.2",
     "grunt-auto-install": "*",
+    "grunt-babel": "^5.0.3",
     "grunt-bower": "*",
     "grunt-bower-concat": "*",
     "grunt-bower-requirejs": "*",
@@ -59,7 +60,7 @@
     "grunt-contrib-handlebars": "0.10.2",
     "grunt-exec": "*",
     "grunt-mkdir": "*",
-    "intern": "^3.0.0",
-    "handlebars": "3.0.3"
+    "handlebars": "3.0.3",
+    "intern": "^3.0.0"
   }
 }
