--- a/bower.json
+++ b/bower.json
@@ -18,19 +18,17 @@
   ],
   "dependencies": {
     "w2ui": "git@github.com:fdgonthier/w2ui-dist.git#master",
-    "d3-tip": "0.6.6",
+    "d3-tip": "git@github.com:VACLab/d3-tip.git#master",
     "jquery": "2.1.1",
     "backbone": "1.1.2",
     "underscore": "1.7.0",
     "jquery-timer": "*",
     "queueManager": "*",
     "nprogress": "0.1.6",
-    "d3": "3.5.2",
+    "d3": "5.16.0",
     "requirejs-bower": "2.1.16",
     "handlebars": "3.0.3",
     "highlightjs": "8.7.0"
-  },
-  "resolutions": {
-    "d3": "3.5.2"
   }
 }
+
